traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
var diag = 0;
^TraversalDiagonal:1: error: expected class or object definition
var diag = 0;
^TraversalDiagonal:3: error: expected class or object definition
var j=0
^TraversalDiagonal:5: error: expected class or object definition
def diag() {
^